Merge 2.2.0 changes into master (#402)